# DiffRL

./: __init__.py  interfaces.py  pyproject.toml
algorithms/: __init__.py  shac.py
envs/: __init__.py  dummy_differentiable.py
models/: __init__.py  actor.py  critic.py
tests/: test_actor_models.py  test_shac_dummy.py
utils/: __init__.py  time_report.py  torch_utils.py
